--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,8 @@
 1999-05-04  Ulrich Drepper  <drepper@cygnus.com>
 
+	* elf/dl-load.c (expand_dynamic_string_token): Rewrite to loose st
+	variable.
+
 	* elf/dl-load.c (expand_dynamic_string_token): Recognize { }
 	around DST.  Correctly ignore ORIGIN IN SUID binaries.
 
