--- a/localedata/ChangeLog
+++ b/localedata/ChangeLog
@@ -1,3 +1,8 @@
+1999-05-05  Ulrich Drepper  <drepper@cygnus.com>
+
+	* locales/ru_RU: Abbreviate Saturday Sbt.
+	Patch by Sergei Ivanov <svivanov@pdmi.ras.ru>.
+
 1999-05-03  Ulrich Drepper  <drepper@cygnus.com>
 
 	* Makefile (distribute): Temporarily add th_TH.in and cs_CZ.in.
