--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+1999-05-06  Thorsten Kukuk  <kukuk@suse.de>
+
+	* stdlib/fpioconst.c: Move #endif before end of struct.
+
 1999-05-05  Ulrich Drepper  <drepper@cygnus.com>
 
 	* Versions.def (ld.so): Add GLIBC_2.1.1.
