--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+1999-05-09  Mark Kettenis  <kettenis@gnu.org>
+
+	* hurd/get-host.c (_hurd_get_host_config): Return an empty value
+	if the file is empty.
+
 1999-05-07  Ulrich Drepper  <drepper@cygnus.com>
 
 	* elf/do-lookup.h: Fix typo in comment.
