--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+1999-05-13  Ulrich Drepper  <drepper@cygnus.com>
+
+	* sysdeps/gnu/getutmpx.c: New file.
+	* sysdeps/gnu/getutmp.c: New file.
+
 1999-05-13  H.J. Lu  <hjl@gnu.org>
 
 	* login/Versions (getutmpx): Added to GLIBC_2.1.1.
