--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+1999-05-16  Roland McGrath  <roland@baalperazim.frob.com>
+
+	* sysdeps/generic/bits/termios.h (CRTSCTS): New macro.
+
 1999-05-16  Thorsten Kukuk  <kukuk@suse.de>
 
 	* sunrpc/etc.rpc: Add portmapper, rstat_svc and pcnfs.
