--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,7 @@
 1999-05-17  Ulrich Drepper  <drepper@cygnus.com>
 
 	* elf/Makefile (distribute): Remove dl-origin.h.
+	Add dl-dst.h and gen-trusted-dirs.awk.
 
 1999-05-17  Andreas Jaeger  <aj@arthur.rhein-neckar.de>
 
