--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+1999-05-18  Andreas Jaeger  <aj@arthur.rhein-neckar.de>
+
+	* sysdeps/i386/i486/bits/string.h (rawmemchr): Remove unneccessary
+	if _FORCE_INLINES.
+
 1999-05-17  Ulrich Drepper  <drepper@cygnus.com>
 
 	* elf/Makefile (distribute): Remove dl-origin.h.
