--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+1999-05-20  Ulrich Drepper  <drepper@cygnus.com>
+
+	* configure.in: Recognize and allow gcc 2.95.
+
 1999-05-19  Jakub Jelinek   <jj@ultra.linux.cz>
 
 	* sysdeps/generic/bits/elfclass.h: Version common to
