--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+1999-05-22  Roland McGrath  <roland@baalperazim.frob.com>
+
+	* sysdeps/generic/bits/sigstack.h (enum SS_*): Remove trailing comma.
+
 1999-05-20  Ulrich Drepper  <drepper@cygnus.com>
 
 	* configure.in: Recognize and allow gcc 2.95.
