--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+1999-05-24  Ulrich Drepper  <drepper@cygnus.com>
+
+	* ctype/ctype.h: Don't optimize toupper/tolower for C++.
+
 1999-05-23  Roland McGrath  <roland@baalperazim.frob.com>
 
 	* hurd/set-host.c (_hurd_set_host_config): Use mode 0644, not 0600.
