--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,8 @@
 1999-05-25  Ulrich Drepper  <drepper@cygnus.com>
 
+	* version.h (VERSION): Bump to 2.1.90.
+	(RELEASE): Mark as development.
+
 	* stdio-common/vfprintf.c (vfprintf): Don't implement special
 	handling for long long if it is the same as long.
 	* stdio-common/vfscanf.c (_IO_vfscanf): Likewise.
