--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+1999-05-27  Andreas Jaeger  <aj@arthur.rhein-neckar.de>
+
+	* manual/socket.texi (Host Names): Remove statement that h_errno
+	needs to be declared since this isn't true anymore.
+	Closes PR libc/1138.
+
 1999-05-26  Ulrich Drepper  <drepper@cygnus.com>
 
 	* config.h.in: Add __LINUX_KERNEL_VERSION.
