--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,9 @@
 1999-05-27  Andreas Jaeger  <aj@arthur.rhein-neckar.de>
 
+	* configure.in: Fix typo.
+
+1999-05-27  Andreas Jaeger  <aj@arthur.rhein-neckar.de>
+
 	* manual/socket.texi (Host Names): Remove statement that h_errno
 	needs to be declared since this isn't true anymore.
 	Closes PR libc/1138.
